--- a/style.css
+++ b/style.css
@@ -132,13 +132,14 @@ p {
 
 .main-contact-links {
     position: absolute;
-    top: 45vh;
-    left: 10%;
+    top: 43vh;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .main-contact-links ul {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
 }
 
 .intro {
@@ -174,7 +175,7 @@ p {
     position: relative;
     background-color: var(--color-3);
     width: 100%;
-    padding: 1rem;
+    padding: 4rem 1rem;
     height: 650px;
 }
 
@@ -182,13 +183,15 @@ p {
     display: flex;
     justify-content: space-around;
     align-items: flex-start;
+    flex-wrap: wrap;
     padding: 2em;
 }
 
 .about-left, .about-right {
     width: 450px;
 }
-.about-right-bottom {
+
+.about-right-top, .about-right-bottom {
     padding-top: 1.5em;
 }
 
@@ -223,7 +226,7 @@ p {
     background-color: var(--color-6);
     width: 100%;
     height: auto;
-    padding: 1rem;
+    padding: 4rem 1rem;
     padding-bottom: 50px;
 }
 
